frame/support/test/tests/pallet_ui/step_005.stderr
error: Invalid pallet::trait_, Trait must be public
 --> $DIR/step_005.rs:4:2
  |
4 |     trait Foo {}
  |     ^^^^^
